[package]
name = "concurrentgraph"
version = "0.1.0"
authors = ["Wes Weirather <weirdev@outlook.com>"]
edition = "2018"

[dependencies]
ndarray = "0.11"
rand = "0.6.0"
libc = "*"
concurrentgraph_cuda_sys = { path = "../concurrentgraph_cuda_sys" }

[target.x86_64-unknown-linux-gnu]
linker = "x86_64-linux-gnu-gcc"